# GymCounter_EmbarcaTech

./: CMakeLists.txt  README.md
include/: Ssd1306.h
src/: main.c  ssd1306.c
